servicemesh/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: mesh-app
spec:
  mtls:
    mode: STRICT
