servicemesh/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: backend-vs
  namespace: mesh-app
spec:
  hosts:
  - "*"
  gateways:
  - external-gw
  http:
  - route:
    - destination:
        host: backend
        subset: v1
        port:
          number: 80
      weight: 80
    - destination:
        host: backend
        subset: v2
        port:
          number: 80
      weight: 20
